Fixed gap on landing page

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1220,7 +1220,7 @@
 
   .infoSection h2 {
     font-size: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 15px;
   }
 
   .detailsInner > .infoSection + .divider + .infoSection {
